crates/server/src/snapshots/server__signature__tests__signature_multi_name_second.snap
---
source: crates/server/src/signature.rs
expression: out
---
SignatureHelp {
    signatures: [
        SignatureInformation {
            label: "concat(String)",
            documentation: Some(
                String(
                    "String",
                ),
            ),
            parameters: Some(
                [
                    ParameterInformation {
                        label: Simple(
                            "String",
                        ),
                        documentation: None,
                    },
                ],
            ),
            active_parameter: None,
        },
        SignatureInformation {
            label: "concat(String, String)",
            documentation: Some(
                String(
                    "String",
                ),
            ),
            parameters: Some(
                [
                    ParameterInformation {
                        label: Simple(
                            "String",
                        ),
                        documentation: None,
                    },
                    ParameterInformation {
                        label: Simple(
                            "String",
                        ),
                        documentation: None,
                    },
                ],
            ),
            active_parameter: None,
        },
    ],
    active_signature: Some(
        1,
    ),
    active_parameter: Some(
        1,
    ),
}
